<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/new_contact_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/background_gray_light"
                android:src="@drawable/ic_person_full"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/new_contact_rotate_rounder"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:backgroundTint="@color/background_transparent"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                android:visibility="gone"
                app:cardCornerRadius="50dp"
                app:cardElevation="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/new_contact_rotate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/background_gray_20"
                    android:src="@drawable/ic_baseline_rotate_left_24" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/new_contact_delete_image_rounder"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:backgroundTint="@color/background_transparent"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                android:visibility="gone"
                app:cardCornerRadius="50dp"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/new_contact_delete_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/background_gray_20"
                    android:src="@drawable/ic_baseline_delete_white_24" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/new_contact_add_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/text_accent_yellow"
                android:elevation="1dp"
                android:src="@drawable/ic_baseline_add_photo_alternate_24"
                app:layout_constraintBottom_toBottomOf="@+id/new_contact_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_contact_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_contact_image">

                <com.nunnos.keepintouch.presentation.component.CustomEditText
                    android:id="@+id/new_contact_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:edit_text_hint_text="@string/name" />

                <com.nunnos.keepintouch.presentation.component.CustomEditText
                    android:id="@+id/new_contact_surname1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:edit_text_hint_text="@string/surname1"
                    tools:edit_text_text="Surname 1" />

                <com.nunnos.keepintouch.presentation.component.CustomEditText
                    android:id="@+id/new_contact_surname2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:edit_text_hint_text="@string/surname2"
                    tools:edit_text_text="Surname 2" />

                <com.nunnos.keepintouch.presentation.component.CustomEditText
                    android:id="@+id/new_contact_alias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:edit_text_hint_text="@string/alias" />

                <com.nunnos.keepintouch.presentation.component.CustomEditText
                    android:id="@+id/new_contact_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:edit_text_hint_text="@string/telephone" />

                <com.nunnos.keepintouch.presentation.component.CustomEditText
                    android:id="@+id/new_contact_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:edit_text_hint_text="@string/email" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.nunnos.keepintouch.presentation.component.recyclerviews.itemtext.ExpanableRecyclerView
                        android:id="@+id/new_contact_gender_expanable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:expanable_recyclerview_hint_text="@string/gender"
                        app:expanable_recyclerview_icon="@drawable/ic_unknown"
                        app:expanable_recyclerview_text_text="@string/unknown"
                        app:layout_constraintEnd_toStartOf="@+id/new_contact_sexual_orientation_expanable"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.nunnos.keepintouch.presentation.component.recyclerviews.itemtext.ExpanableRecyclerView
                        android:id="@+id/new_contact_sexual_orientation_expanable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:expanable_recyclerview_hint_text="@string/sexual_orientation"
                        app:expanable_recyclerview_icon="@drawable/ic_unknown"
                        app:expanable_recyclerview_text_text="@string/unknown"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/new_contact_gender_expanable"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- SELECTOR DATA-->
                <com.nunnos.keepintouch.presentation.component.CustomSwitch
                    android:id="@+id/new_contact_birthday_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:custom_switch_selected_background_color="@color/purple_700"
                    app:custom_switch_text_left="@string/birthday"
                    app:custom_switch_text_right="@string/age" />

                <com.nunnos.keepintouch.presentation.component.CustomEditText
                    android:id="@+id/new_contact_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:maxLines="1"
                    app:edit_text_clickable="true"
                    app:edit_text_focusable="false"
                    app:edit_text_hint_text="@string/birthday"
                    app:edit_text_text="@string/date_format" />

                <com.nunnos.keepintouch.presentation.component.CustomEditText
                    android:id="@+id/new_contact_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:maxLines="1"
                    android:visibility="gone"
                    app:edit_text_hint_text="@string/age" />

                <com.nunnos.keepintouch.presentation.component.CustomEditText
                    android:id="@+id/new_contact_adress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:edit_text_hint_text="@string/address"
                    tools:edit_text_text="Address" />

                <com.nunnos.keepintouch.presentation.component.CustomEditText
                    android:id="@+id/new_contact_profession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:edit_text_hint_text="@string/profession"
                    tools:edit_text_text="Profession" />

                <com.nunnos.keepintouch.presentation.component.CustomEditText
                    android:id="@+id/new_contact_placeofwork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:edit_text_hint_text="@string/place_of_work"
                    tools:edit_text_text="Place of work" />

                <com.nunnos.keepintouch.presentation.component.CustomEditText
                    android:id="@+id/new_contact_how_we_met"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:edit_text_hint_text="@string/how_we_met"
                    tools:edit_text_text="How we met" />

                <com.nunnos.keepintouch.presentation.component.CustomEditText
                    android:id="@+id/new_contact_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:edit_text_hint_text="@string/language"
                    tools:edit_text_text="Language" />

                <com.nunnos.keepintouch.presentation.component.CustomEditText
                    android:id="@+id/new_contact_religion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:edit_text_hint_text="@string/religion"
                    tools:edit_text_text="Unknown" />

                <com.nunnos.keepintouch.presentation.component.recyclerviews.contactsselector.ExpanableMultipleSelectorRecyclerView
                    android:id="@+id/new_contact_relatives"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:expanable_recyclerview_hint_text="@string/relatives"
                    app:expanable_recyclerview_icon="@drawable/ic_unknown"
                    app:expanable_recyclerview_text_text="@string/unknown" />

                <com.nunnos.keepintouch.presentation.component.CustomEditText
                    android:id="@+id/new_contact_social_media"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:edit_text_hint_text="@string/social_media"
                    tools:edit_text_text="Social media" />

                <com.nunnos.keepintouch.presentation.component.BgPicker
                    android:id="@+id/new_contact_background_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:color_id="@color/background_purple_dark"
                    app:edit_text_hint="@string/background_color"
                    app:image_clickable="true"
                    app:image_focusable="false" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/new_contact_save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/save" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/new_contact_delete_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="@color/background_red"
                    android:text="@string/delete"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <data>

        <import type="android.view.View" />

        <variable
            name="shareviewmodelmain"
            type="com.nunnos.keepintouch.presentation.feature.main.activity.vm.MainViewModel" />

        <variable
            name="shareviewmodeleditcontact"
            type="com.nunnos.keepintouch.presentation.feature.contactinfo.activity.vm.ContactInfoViewModel" />
    </data>
</layout>
